# SovereignAISwarm

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.cfg  sovereign.yaml
examples/basic/: README.md  agent_handoff.py  bare_minimum.py  context_variables.py  function_calling.py  repl_demo.py
examples/n8n/: README.md  run_task.py  sample_payload.json
examples/sovereign/: README.md  conductor_pipeline.py  filesystem_agent.py
sovereignaiswarm/: core.py  llm.py  types.py
sovereignaiswarm/repl/: repl.py
swarm/: __init__.py  conductor.py  config.py  filesystem.py  llm.py  pipeline.py  types.py  util.py
swarm/repl/: __init__.py  repl.py
tests/: test_conductor.py  test_config.py  test_core.py  test_filesystem.py  test_llm.py  test_n8n_bridge.py  test_pipeline.py  test_repl.py  test_types.py  test_util.py
