[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project metadata primarily lives in setup.cfg (name = sovereignaiswarm).
# SovereignAISwarm is an independent fork of the upstream Swarm project.
# It is not affiliated with, endorsed by, or sponsored by any organization.
