[metadata]
name = sovereignaiswarm
version = 0.2.0
author = SovereignAISwarm
description = A local-first, offline-capable multi-agent orchestration framework (sovereign fork of the original Swarm project).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic>=2.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=7.0

[options.packages.find]
exclude =
    tests*
    examples*
    _ref*
