[metadata]
name = sovereignaiswarm
version = 0.2.0
author = SovereignAISwarm
description = SovereignAISwarm: a local-first, offline-capable multi-agent orchestration framework (independent fork of the original Swarm project / Swarm educational framework).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    multi-agent
    local-llm
    orchestration
    sovereign
    offline

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic>=2.0
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=7.0

[options.packages.find]
exclude =
    tests*
    examples*
    _ref*
